--- a/index.html
+++ b/index.html
@@ -5,62 +5,39 @@
 <title>Happy 的个人主页</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
-<script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
 <style>
 body, html {margin:0; padding:0; font-family:'Roboto', sans-serif; overflow-x:hidden;}
-/* 视频背景 */
-#bgVideo {
-    position: fixed; top:0; left:0; width:100%; height:100%; object-fit:cover; z-index:0;
-}
+#bgVideo {position:fixed; top:0; left:0; width:100%; height:100%; object-fit:cover; z-index:0;}
 #particles {position:fixed; top:0; left:0; width:100%; height:100%; pointer-events:none; z-index:0;}
-
-/* 夜间模式 */
 body.dark { color:#eee; }
 body.dark .card { background:rgba(50,50,50,0.9); color:#eee; }
-body.dark header, body.dark nav { color:white; }
-
-/* 卡片 */
 .card { background:rgba(255,255,255,0.95); color:#333; padding:20px; border-radius:15px; width:320px; margin:20px auto; box-shadow:0 6px 20px rgba(0,0,0,0.1); transition:0.5s; }
 .card.show { opacity:1; transform:translateY(0) scale(1);}
 .card .tags { margin-top:10px;}
 .card .tag { display:inline-block; background:linear-gradient(45deg,#ff6b6b,#ffcc33); color:white; padding:5px 10px; margin:3px; border-radius:15px; font-size:12px; transition:0.2s;}
 .card .tag:hover { transform:scale(1.1); }
-
-/* header */
 header { text-align:center; padding:60px 20px 20px; position:relative; z-index:1; color:white;}
 header img { width:140px; height:140px; border-radius:50%; border:4px solid white; margin-bottom:20px; transition:transform 0.3s;}
 header img:hover {transform:scale(1.1);}
 header h1{margin:10px 0; font-size:36px;}
 header p{font-size:18px; margin:5px 0;}
-
-/* nav */
 nav { margin-top:20px; background:rgba(0,0,0,0.2); padding:10px 0; position:sticky; top:0; z-index:5; border-radius:10px; transition:0.3s;}
 nav.scrolled { background:rgba(0,0,0,0.7); box-shadow:0 4px 10px rgba(0,0,0,0.3);}
 nav a { margin:0 15px; text-decoration:none; color:white; font-weight:bold; transition:0.3s;}
 nav a.active { color:#ffeb3b;}
-nav a:hover { color:#ffeb3b;}
-
-/* 日夜切换按钮 */
+nav a:hover { color:#ffeb3b; }
 #modeToggle { position:fixed; top:20px; right:20px; padding:8px 15px; background:linear-gradient(45deg,#2196F3,#21CBF3); color:white; border-radius:20px; cursor:pointer; z-index:10; transition:0.3s;}
 #modeToggle:hover { background:linear-gradient(45deg,#1976d2,#1aa8c7); }
-
-/* 返回顶部按钮 */
 #toTopBtn { position:fixed; bottom:30px; right:30px; background:linear-gradient(45deg,#4caf50,#81c784); color:white; border:none; padding:12px 18px; border-radius:50px; cursor:pointer; font-size:16px; z-index:10; display:none; transition:0.3s;}
 #toTopBtn:hover { background:linear-gradient(45deg,#388e3c,#66bb6a); }
-
-/* 联系我 */
 .contact .qr { display:flex; justify-content:center; margin-top:20px; }
 .contact .qr img { width:140px; height:140px; border-radius:15px; border:2px solid #ccc; cursor:pointer; transition:0.3s;}
 .contact .qr img:hover { transform:scale(1.1); }
-
 #qrModal { display:none; position:fixed; z-index:10; left:0; top:0; width:100%; height:100%; background:rgba(0,0,0,0.6); justify-content:center; align-items:center; }
 #qrModal img { max-width:300px; border-radius:15px; border:3px solid #fff;}
 #qrModal.show { display:flex; }
-
-/* section */
 section { padding:60px 20px; text-align:center; position:relative; z-index:1; }
 section h2 { font-size:28px; color:#4CAF50; margin-bottom:30px; }
-
 @media(max-width:600px){ header img{width:100px;height:100px;} .card{width:90%;} nav a{margin:0 8px; font-size:14px;} }
 </style>
 </head>
@@ -85,7 +62,6 @@ section h2 { font-size:28px; color:#4CAF50; margin-bottom:30px; }
 <div id="modeToggle">🌙 日/夜切换</div>
 <button id="toTopBtn">⬆️ 顶部</button>
 
-<!-- 关于我 -->
 <section id="about">
   <h2>关于我</h2>
   <div class="card show">
@@ -99,7 +75,6 @@ section h2 { font-size:28px; color:#4CAF50; margin-bottom:30px; }
   </div>
 </section>
 
-<!-- 日记 -->
 <section id="diary">
   <h2>我的日记 📖</h2>
   <div class="card">
@@ -110,7 +85,6 @@ section h2 { font-size:28px; color:#4CAF50; margin-bottom:30px; }
   <div id="diaryList"></div>
 </section>
 
-<!-- 联系我 -->
 <section id="contact">
   <h2>联系我</h2>
   <p>微信：<strong>H4ppy_ma</strong></p>
@@ -125,76 +99,63 @@ section h2 { font-size:28px; color:#4CAF50; margin-bottom:30px; }
 <div id="qrModal"><img src="https://github.com/Happyma-4869/Happyma-4869.github.io/blob/main/%E5%BE%AE%E4%BF%A1%E5%9B%BE%E7%89%87_20251207233522_10_79.jpg?raw=true" alt="微信二维码大图"></div>
 
 <script>
-// Supabase 初始化
-const supabaseUrl = 'https://ydpqboowpfijppwgrals.supabase.co';
-const supabaseKey = 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InlkcHFib293cGZpanBwd2dyYWxzIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NjUxNDI0NjAsImV4cCI6MjA4MDcxODQ2MH0.6uF8nCdjVzaevZroBoA7isiVWAZ6k5LXlAwQrbuYWYM';
-const supabase = supabase.createClient(supabaseUrl, supabaseKey);
+// 本地日记
+const diaryList=document.getElementById('diaryList');
+const addDiaryBtn=document.getElementById('addDiaryBtn');
+const diaryDate=document.getElementById('diaryDate');
+const diaryContent=document.getElementById('diaryContent');
 
-// 元素
-const diaryList = document.getElementById('diaryList');
-const addDiaryBtn = document.getElementById('addDiaryBtn');
-const diaryDate = document.getElementById('diaryDate');
-const diaryContent = document.getElementById('diaryContent');
+// 初始化显示第一条日记
+let diaries=JSON.parse(localStorage.getItem('diaries'))||[
+  {date:'2025-12-08', content:'今天是我初次创建我的个人网站  目前还在测试中  以后我会逐步完善耶✌'}
+];
 
-// 加载日记
-async function fetchDiaries(){
-  const { data, error } = await supabase.from('diaries').select('*').order('id',{ascending:false});
-  if(error){ console.log(error); return; }
+// 渲染日记
+function renderDiaries(){
   diaryList.innerHTML='';
-  data.forEach(d => addDiaryCard(d));
+  diaries.forEach((d,i)=>{
+    const card=document.createElement('div');
+    card.className='card show';
+    card.innerHTML=`<p><strong>${d.date}</strong></p><p>${d.content}</p>
+      <div style="margin-top:5px;">
+        <button onclick="editDiary(${i})">编辑</button>
+        <button onclick="deleteDiary(${i})">删除</button>
+      </div>`;
+    diaryList.appendChild(card);
+  });
+  localStorage.setItem('diaries', JSON.stringify(diaries));
 }
-
-// 渲染卡片
-function addDiaryCard(d){
-  const card=document.createElement('div');
-  card.className='card show';
-  card.innerHTML=`<p><strong>${d.date}</strong></p><p>${d.content}</p>
-    <div style="margin-top:5px;">
-      <button onclick="editDiary(${d.id})">编辑</button>
-      <button onclick="deleteDiary(${d.id})">删除</button>
-    </div>`;
-  diaryList.appendChild(card);
-}
+renderDiaries();
 
 // 添加日记
-addDiaryBtn.addEventListener('click', async()=>{
+addDiaryBtn.addEventListener('click',()=>{
   const dateVal=diaryDate.value||new Date().toISOString().split('T')[0];
   const contentVal=diaryContent.value.trim();
   if(!contentVal){ alert('请填写内容'); return; }
-  const { data, error } = await supabase.from('diaries').insert([{date:dateVal,content:contentVal}]);
-  if(error){ alert(error.message); return; }
+  diaries.unshift({date:dateVal, content:contentVal});
   diaryDate.value=''; diaryContent.value='';
-  fetchDiaries();
+  renderDiaries();
 });
 
 // 删除日记
-async function deleteDiary(id){
-  if(!confirm('确认删除吗？')) return;
-  const { error } = await supabase.from('diaries').delete().eq('id',id);
-  if(error){ alert(error.message); return; }
-  fetchDiaries();
-}
+function deleteDiary(i){ diaries.splice(i,1); renderDiaries(); }
 
 // 编辑日记
-async function editDiary(id){
-  const newContent = prompt('请输入新的日记内容：');
+function editDiary(i){
+  const newContent=prompt('请输入新的日记内容：', diaries[i].content);
   if(newContent===null) return;
-  const { error } = await supabase.from('diaries').update({content:newContent}).eq('id',id);
-  if(error){ alert(error.message); return; }
-  fetchDiaries();
+  diaries[i].content=newContent;
+  renderDiaries();
 }
 
-// 页面加载时获取日记
-window.addEventListener('load', fetchDiaries);
-
-// 日夜模式切换
+// 日夜模式
 const modeToggle=document.getElementById('modeToggle');
 modeToggle.addEventListener('click',()=>{ document.body.classList.toggle('dark'); });
 
 // 返回顶部
 const toTopBtn=document.getElementById('toTopBtn');
 window.addEventListener('scroll',()=>{
-  if(window.scrollY>200) toTopBtn.style.display='block'; else toTopBtn.style.display='none';
+  toTopBtn.style.display=(window.scrollY>200)?'block':'none';
 });
 toTopBtn.addEventListener('click',()=>{ window.scrollTo({top:0, behavior:'smooth'}); });
 
