--- a/index.html
+++ b/index.html
@@ -6,24 +6,25 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
 <style>
-body, html {margin:0; padding:0; font-family:'Roboto', sans-serif; overflow-x:hidden;}
+body, html {margin:0; padding:0; font-family:'Roboto', sans-serif; overflow-x:hidden; color:#333;}
 #bgVideo {position:fixed; top:0; left:0; width:100%; height:100%; object-fit:cover; z-index:0;}
 #particles {position:fixed; top:0; left:0; width:100%; height:100%; pointer-events:none; z-index:0;}
 body.dark { color:#eee; }
-body.dark .card { background:rgba(50,50,50,0.9); color:#eee; }
-.card { background:rgba(255,255,255,0.95); color:#333; padding:20px; border-radius:15px; width:320px; margin:20px auto; box-shadow:0 6px 20px rgba(0,0,0,0.1); transition:0.5s; }
+.card { background:rgba(255,255,255,0.95); color:inherit; padding:20px; border-radius:15px; width:320px; margin:20px auto; box-shadow:0 6px 20px rgba(0,0,0,0.1); transition:0.5s; display:flex; flex-direction:column; gap:10px; }
+body.dark .card { background:rgba(50,50,50,0.9); }
 .card.show { opacity:1; transform:translateY(0) scale(1);}
 .card .tags { margin-top:10px;}
 .card .tag { display:inline-block; background:linear-gradient(45deg,#ff6b6b,#ffcc33); color:white; padding:5px 10px; margin:3px; border-radius:15px; font-size:12px; transition:0.2s;}
 .card .tag:hover { transform:scale(1.1); }
-header { text-align:center; padding:60px 20px 20px; position:relative; z-index:1; color:white;}
+header { text-align:center; padding:60px 20px 20px; position:relative; z-index:1;}
 header img { width:140px; height:140px; border-radius:50%; border:4px solid white; margin-bottom:20px; transition:transform 0.3s;}
 header img:hover {transform:scale(1.1);}
+header h1, header p { color: inherit; margin:0;}
 header h1{margin:10px 0; font-size:36px;}
 header p{font-size:18px; margin:5px 0;}
 nav { margin-top:20px; background:rgba(0,0,0,0.2); padding:10px 0; position:sticky; top:0; z-index:5; border-radius:10px; transition:0.3s;}
 nav.scrolled { background:rgba(0,0,0,0.7); box-shadow:0 4px 10px rgba(0,0,0,0.3);}
-nav a { margin:0 15px; text-decoration:none; color:white; font-weight:bold; transition:0.3s;}
+nav a { margin:0 15px; text-decoration:none; font-weight:bold; transition:0.3s;}
 nav a.active { color:#ffeb3b;}
 nav a:hover { color:#ffeb3b; }
 #modeToggle { position:fixed; top:20px; right:20px; padding:8px 15px; background:linear-gradient(45deg,#2196F3,#21CBF3); color:white; border-radius:20px; cursor:pointer; z-index:10; transition:0.3s;}
@@ -38,6 +39,10 @@ nav a:hover { color:#ffeb3b; }
 #qrModal.show { display:flex; }
 section { padding:60px 20px; text-align:center; position:relative; z-index:1; }
 section h2 { font-size:28px; color:#4CAF50; margin-bottom:30px; }
+.diary-actions { display:flex; flex-direction:column; gap:5px; margin-top:10px;}
+.diary-actions button, #addDiaryBtn { padding:8px 12px; cursor:pointer; border:none; border-radius:10px; background:linear-gradient(45deg,#2196F3,#21CBF3); color:white; font-weight:bold; transition:0.3s;}
+.diary-actions button:hover, #addDiaryBtn:hover { background:linear-gradient(45deg,#1976d2,#1aa8c7);}
+textarea, input[type="date"] { width:100%; padding:8px; border-radius:10px; border:1px solid #ccc; resize:none;}
 @media(max-width:600px){ header img{width:100px;height:100px;} .card{width:90%;} nav a{margin:0 8px; font-size:14px;} }
 </style>
 </head>
@@ -99,35 +104,33 @@ section h2 { font-size:28px; color:#4CAF50; margin-bottom:30px; }
 <div id="qrModal"><img src="https://github.com/Happyma-4869/Happyma-4869.github.io/blob/main/%E5%BE%AE%E4%BF%A1%E5%9B%BE%E7%89%87_20251207233522_10_79.jpg?raw=true" alt="微信二维码大图"></div>
 
 <script>
-// 本地日记
+// 日记存储与渲染
 const diaryList=document.getElementById('diaryList');
 const addDiaryBtn=document.getElementById('addDiaryBtn');
 const diaryDate=document.getElementById('diaryDate');
 const diaryContent=document.getElementById('diaryContent');
 
-// 初始化显示第一条日记
 let diaries=JSON.parse(localStorage.getItem('diaries'))||[
   {date:'2025-12-08', content:'今天是我初次创建我的个人网站  目前还在测试中  以后我会逐步完善耶✌'}
 ];
 
-// 渲染日记
 function renderDiaries(){
   diaryList.innerHTML='';
   diaries.forEach((d,i)=>{
     const card=document.createElement('div');
     card.className='card show';
-    card.innerHTML=`<p><strong>${d.date}</strong></p><p>${d.content}</p>
-      <div style="margin-top:5px;">
-        <button onclick="editDiary(${i})">编辑</button>
-        <button onclick="deleteDiary(${i})">删除</button>
-      </div>`;
+    card.innerHTML=`<p><strong>${d.date}</strong></p>
+                    <p>${d.content}</p>
+                    <div class="diary-actions">
+                      <button onclick="editDiary(${i})">编辑</button>
+                      <button onclick="deleteDiary(${i})">删除</button>
+                    </div>`;
     diaryList.appendChild(card);
   });
   localStorage.setItem('diaries', JSON.stringify(diaries));
 }
 renderDiaries();
 
-// 添加日记
 addDiaryBtn.addEventListener('click',()=>{
   const dateVal=diaryDate.value||new Date().toISOString().split('T')[0];
   const contentVal=diaryContent.value.trim();
@@ -137,10 +140,8 @@ addDiaryBtn.addEventListener('click',()=>{
   renderDiaries();
 });
 
-// 删除日记
 function deleteDiary(i){ diaries.splice(i,1); renderDiaries(); }
 
-// 编辑日记
 function editDiary(i){
   const newContent=prompt('请输入新的日记内容：', diaries[i].content);
   if(newContent===null) return;
