--- a/index.html
+++ b/index.html
@@ -12,9 +12,24 @@ body.dark #bgVideo { filter: brightness(40%) contrast(110%); }
 
 #particles {position:fixed; top:0; left:0; width:100%; height:100%; pointer-events:none; z-index:0;}
 body.dark { color:#eee; }
-.card { background:rgba(255,255,255,0.95); color:inherit; padding:20px; border-radius:15px; width:320px; margin:20px auto; box-shadow:0 6px 20px rgba(0,0,0,0.1); transition:0.5s; display:flex; flex-direction:column; gap:10px; }
-body.dark .card { background:rgba(50,50,50,0.9); }
-.card.show { opacity:1; transform:translateY(0) scale(1);}
+
+.card {
+    background: rgba(255, 255, 255, 0.8);
+    color: inherit;
+    padding: 25px 20px;
+    border-radius: 20px;
+    width: 320px;
+    margin: 20px auto;
+    box-shadow: 0 8px 20px rgba(0, 0, 0, 0.15);
+    backdrop-filter: blur(10px);
+    display: flex;
+    flex-direction: column;
+    gap: 12px;
+    transition: transform 0.3s ease, box-shadow 0.3s ease, background 0.5s;
+}
+.card:hover { transform: translateY(-5px); box-shadow: 0 12px 25px rgba(0,0,0,0.2); }
+body.dark .card { background: rgba(40,40,40,0.7); }
+
 .card .tags { margin-top:10px;}
 .card .tag { display:inline-block; background:linear-gradient(45deg,#ff6b6b,#ffcc33); color:white; padding:5px 10px; margin:3px; border-radius:15px; font-size:12px; transition:0.2s;}
 .card .tag:hover { transform:scale(1.1); }
@@ -25,6 +40,7 @@ header img:hover {transform:scale(1.1);}
 header h1, header p { color: inherit; margin:0;}
 header h1{margin:10px 0; font-size:36px;}
 header p{font-size:18px; margin:5px 0;}
+
 nav { margin-top:20px; background:rgba(0,0,0,0.2); padding:10px 0; position:sticky; top:0; z-index:5; border-radius:10px; transition:0.3s;}
 nav.scrolled { background:rgba(0,0,0,0.7); box-shadow:0 4px 10px rgba(0,0,0,0.3);}
 nav a { margin:0 15px; text-decoration:none; font-weight:bold; transition:0.3s;}
