--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@ body.dark #bgVideo { filter: brightness(40%) contrast(110%); }
 #particles {position:fixed; top:0; left:0; width:100%; height:100%; pointer-events:none; z-index:0;}
 body.dark { color:#eee; }
 
+/* 卡片风格 */
 .card {
     background: rgba(255, 255, 255, 0.8);
     color: inherit;
@@ -64,10 +65,11 @@ nav a:hover { color:#ffeb3b; }
 section { padding:60px 20px; text-align:center; position:relative; z-index:1; }
 section h2 { font-size:28px; color:#4CAF50; margin-bottom:30px; }
 
-.diary-actions { display:flex; flex-direction:column; gap:5px; margin-top:10px;}
+textarea, input[type="date"] { width:90%; padding:8px; border-radius:10px; border:1px solid #ccc; resize:none; margin:0 auto; display:block; text-align:left; }
+
+.diary-actions { display:flex; justify-content:center; gap:10px; margin-top:10px; }
 .diary-actions button, #addDiaryBtn { padding:8px 12px; cursor:pointer; border:none; border-radius:10px; background:linear-gradient(45deg,#2196F3,#21CBF3); color:white; font-weight:bold; transition:0.3s;}
-.diary-actions button:hover, #addDiaryBtn:hover { background:linear-gradient(45deg,#1976d2,#1aa8c7);}
-textarea, input[type="date"] { width:100%; padding:8px; border-radius:10px; border:1px solid #ccc; resize:none;}
+.diary-actions button:hover, #addDiaryBtn:hover { background:linear-gradient(45deg,#1976d2,#1aa8c7); }
 
 @media(max-width:600px){ header img{width:100px;height:100px;} .card{width:90%;} nav a{margin:0 8px; font-size:14px;} }
 </style>
@@ -130,7 +132,7 @@ textarea, input[type="date"] { width:100%; padding:8px; border-radius:10px; bord
 <div id="qrModal"><img src="https://github.com/Happyma-4869/Happyma-4869.github.io/blob/main/%E5%BE%AE%E4%BF%A1%E5%9B%BE%E7%89%87_20251207233522_10_79.jpg?raw=true" alt="微信二维码大图"></div>
 
 <script>
-// 日记存储与渲染
+// ---------------- 日记功能 ----------------
 const diaryList=document.getElementById('diaryList');
 const addDiaryBtn=document.getElementById('addDiaryBtn');
 const diaryDate=document.getElementById('diaryDate');
@@ -167,7 +169,6 @@ addDiaryBtn.addEventListener('click',()=>{
 });
 
 function deleteDiary(i){ diaries.splice(i,1); renderDiaries(); }
-
 function editDiary(i){
   const newContent=prompt('请输入新的日记内容：', diaries[i].content);
   if(newContent===null) return;
@@ -175,53 +176,76 @@ function editDiary(i){
   renderDiaries();
 }
 
-// 日夜模式
+// ---------------- 日夜模式 ----------------
 const modeToggle=document.getElementById('modeToggle');
-modeToggle.addEventListener('click',()=>{ document.body.classList.toggle('dark'); });
-
-// 返回顶部
-const toTopBtn=document.getElementById('toTopBtn');
-window.addEventListener('scroll',()=>{
-  toTopBtn.style.display=(window.scrollY>200)?'block':'none';
+let particleType='leaf';
+modeToggle.addEventListener('click',()=>{
+    document.body.classList.toggle('dark');
+    particleType=document.body.classList.contains('dark')?'snow':'leaf';
 });
+
+// ---------------- 返回顶部 ----------------
+const toTopBtn=document.getElementById('toTopBtn');
+window.addEventListener('scroll',()=>{ toTopBtn.style.display=(window.scrollY>200)?'block':'none'; });
 toTopBtn.addEventListener('click',()=>{ window.scrollTo({top:0, behavior:'smooth'}); });
 
-// 粒子动画
+// ---------------- 粒子动画 ----------------
 const canvas=document.getElementById('particles');
 const ctx=canvas.getContext('2d');
 let particlesArray=[], mouse={x:null,y:null};
 canvas.width=window.innerWidth; canvas.height=window.innerHeight;
 window.addEventListener('resize',()=>{ canvas.width=window.innerWidth; canvas.height=window.innerHeight; initParticles(); });
 window.addEventListener('mousemove', e=>{ mouse.x=e.x; mouse.y=e.y; });
+
 class Particle{
-  constructor(){ this.x=Math.random()*canvas.width; this.y=Math.random()*canvas.height; this.size=Math.random()*3+1; this.speedX=Math.random()*1-0.5; this.speedY=Math.random()*1-0.5; }
-  update(){ this.x+=this.speedX+(mouse.x?(mouse.x-this.x)*0.0005:0); this.y+=this.speedY+(mouse.y?(mouse.y-this.y)*0.0005:0); if(this.x>canvas.width)this.x=0; if(this.x<0)this.x=canvas.width; if(this.y>canvas.height)this.y=0; if(this.y<0)this.y=canvas.height; }
-  draw(){ ctx.fillStyle='rgba(255,255,255,0.7)'; ctx.beginPath(); ctx.arc(this.x,this.y,this.size,0,Math.PI*2); ctx.fill(); }
+  constructor(){
+    this.x=Math.random()*canvas.width;
+    this.y=Math.random()*canvas.height;
+    this.size=Math.random()*3+1;
+    this.speedX=Math.random()*1-0.5;
+    this.speedY=Math.random()*1-0.5;
+  }
+  update(){
+    if(particleType==='leaf'){
+        this.y += 0.5 + Math.random();
+        this.x += Math.sin(this.y/20)*2;
+    } else { // snow
+        this.y += 1 + Math.random()*1.5;
+        this.x += Math.sin(this.y/10)*0.5;
+    }
+    if(this.y>canvas.height) this.y=0;
+    if(this.x>canvas.width) this.x=0;
+    if(this.x<0) this.x=canvas.width;
+  }
+  draw(){
+    ctx.fillStyle = particleType==='leaf' ? 'rgba(34,139,34,0.7)' : 'rgba(255,255,255,0.8)';
+    ctx.beginPath();
+    ctx.arc(this.x,this.y,this.size,0,Math.PI*2);
+    ctx.fill();
+  }
 }
 function initParticles(){ particlesArray=[]; for(let i=0;i<150;i++){ particlesArray.push(new Particle()); } }
 function animateParticles(){ ctx.clearRect(0,0,canvas.width,canvas.height); particlesArray.forEach(p=>{p.update();p.draw();}); requestAnimationFrame(animateParticles);}
 initParticles(); animateParticles();
 
-// 微信二维码弹窗
+// ---------------- 微信二维码弹窗 ----------------
 const qrImg=document.getElementById('qrImg');
 const qrModal=document.getElementById('qrModal');
 qrImg.addEventListener('click',()=>qrModal.classList.add('show'));
 qrModal.addEventListener('click',()=>qrModal.classList.remove('show'));
 
-// 滚动显示卡片
+// ---------------- 卡片滚动动画 ----------------
 function showOnScroll() {
     const cards = document.querySelectorAll('.card');
     cards.forEach(card => {
         const rect = card.getBoundingClientRect();
-        if (rect.top < window.innerHeight - 50) {
-            card.classList.add('show');
-        }
+        if (rect.top < window.innerHeight - 50) card.classList.add('show');
     });
 }
 window.addEventListener('scroll', showOnScroll);
 window.addEventListener('load', showOnScroll);
 
-// 导航滚动高亮
+// ---------------- 导航高亮 ----------------
 const mainNav = document.getElementById('mainNav');
 const navLinks = mainNav.querySelectorAll('a');
 window.addEventListener('scroll', () => {
@@ -229,10 +253,9 @@ window.addEventListener('scroll', () => {
         const section = document.querySelector(link.getAttribute('href'));
         if(section.offsetTop - 70 <= window.scrollY && section.offsetTop + section.offsetHeight > window.scrollY){
             link.classList.add('active');
-        }else{ link.classList.remove('active'); }
+        } else { link.classList.remove('active'); }
     });
 });
 </script>
-
 </body>
 </html>
