--- a/index.html
+++ b/index.html
@@ -178,10 +178,9 @@ function editDiary(i){
 
 // ---------------- 日夜模式 ----------------
 const modeToggle=document.getElementById('modeToggle');
-let particleType='leaf';
 modeToggle.addEventListener('click',()=>{
     document.body.classList.toggle('dark');
-    particleType=document.body.classList.contains('dark')?'snow':'leaf';
+    initParticles(); // 切换粒子效果
 });
 
 // ---------------- 返回顶部 ----------------
@@ -189,44 +188,50 @@ const toTopBtn=document.getElementById('toTopBtn');
 window.addEventListener('scroll',()=>{ toTopBtn.style.display=(window.scrollY>200)?'block':'none'; });
 toTopBtn.addEventListener('click',()=>{ window.scrollTo({top:0, behavior:'smooth'}); });
 
-// ---------------- 粒子动画 ----------------
-const canvas=document.getElementById('particles');
-const ctx=canvas.getContext('2d');
-let particlesArray=[], mouse={x:null,y:null};
-canvas.width=window.innerWidth; canvas.height=window.innerHeight;
-window.addEventListener('resize',()=>{ canvas.width=window.innerWidth; canvas.height=window.innerHeight; initParticles(); });
-window.addEventListener('mousemove', e=>{ mouse.x=e.x; mouse.y=e.y; });
+// ---------------- 粒子动画优化 ----------------
+const canvas = document.getElementById('particles');
+const ctx = canvas.getContext('2d');
+let particlesArray = [];
+let mouse = {x:null, y:null};
 
-class Particle{
-  constructor(){
-    this.x=Math.random()*canvas.width;
-    this.y=Math.random()*canvas.height;
-    this.size=Math.random()*3+1;
-    this.speedX=Math.random()*1-0.5;
-    this.speedY=Math.random()*1-0.5;
-  }
-  update(){
-    if(particleType==='leaf'){
-        this.y += 0.5 + Math.random();
-        this.x += Math.sin(this.y/20)*2;
-    } else { // snow
-        this.y += 1 + Math.random()*1.5;
-        this.x += Math.sin(this.y/10)*0.5;
+function resizeCanvas() { canvas.width = window.innerWidth; canvas.height = window.innerHeight; }
+window.addEventListener('resize', resizeCanvas);
+resizeCanvas();
+window.addEventListener('mousemove', e => { mouse.x = e.x; mouse.y = e.y; });
+
+class Particle {
+    constructor(){
+        this.x=Math.random()*canvas.width;
+        this.y=Math.random()*canvas.height;
+        this.size=Math.random()*2+1;
+        this.speedX=(Math.random()-0.5)*0.5;
+        this.speedY=(Math.random()-0.5)*0.5;
+        this.color='rgba(255,255,255,0.7)';
+        if(document.body.classList.contains('dark')) this.color='rgba(180,220,255,0.8)';
     }
-    if(this.y>canvas.height) this.y=0;
-    if(this.x>canvas.width) this.x=0;
-    if(this.x<0) this.x=canvas.width;
-  }
-  draw(){
-    ctx.fillStyle = particleType==='leaf' ? 'rgba(34,139,34,0.7)' : 'rgba(255,255,255,0.8)';
-    ctx.beginPath();
-    ctx.arc(this.x,this.y,this.size,0,Math.PI*2);
-    ctx.fill();
-  }
+    update(){
+        if(mouse.x && mouse.y){ this.x+=(mouse.x-this.x)*0.002; this.y+=(mouse.y-this.y)*0.002; }
+        this.x+=this.speedX; this.y+=this.speedY;
+        if(this.y>canvas.height)this.y=0;
+        if(this.x>canvas.width)this.x=0;
+        if(this.x<0)this.x=canvas.width;
+    }
+    draw(){ ctx.fillStyle=this.color; ctx.beginPath(); ctx.arc(this.x,this.y,this.size,0,Math.PI*2); ctx.fill(); }
 }
-function initParticles(){ particlesArray=[]; for(let i=0;i<150;i++){ particlesArray.push(new Particle()); } }
+
+function initParticles(){
+    particlesArray=[];
+    let count = document.body.classList.contains('dark') ? 150 : 70;
+    for(let i=0;i<count;i++){
+        let p=new Particle();
+        if(document.body.classList.contains('dark')) p.color='rgba(180,220,255,0.8)';
+        particlesArray.push(p);
+    }
+}
+initParticles();
+
 function animateParticles(){ ctx.clearRect(0,0,canvas.width,canvas.height); particlesArray.forEach(p=>{p.update();p.draw();}); requestAnimationFrame(animateParticles);}
-initParticles(); animateParticles();
+animateParticles();
 
 // ---------------- 微信二维码弹窗 ----------------
 const qrImg=document.getElementById('qrImg');
